# civicaccess

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MILESTONE_0_7_DONE.md  PROBE-PROGRESS.md  PRODUCTION_DEPTH_REVIEW_PERSISTENCE_DONE.md  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
.agent-runs/2026-05-21-civicaccess-v1-public-use/: active-control-state.md  manifest.yaml  release-gate-audit.md  scope-lock.yaml
.github/workflows/: verify.yml
civicaccess/: __init__.py  access_review.py  db_admin.py  exports.py  main.py  multilingual.py  plain_language.py  public_ui.py  workflows.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  audit-lite-api-validation-2026-06-05.md  audit-lite-civiccore-1-2-alignment-2026-06-05.md  audit-lite-public-review-ui-2026-06-05.md  audit-lite-schema-readiness-2026-06-05.md  audit-lite-standalone-persistence-staff-workspace-2026-06-06.md  browser-qa-civicaccess-v0.1.1-alignment-summary.md  browser-qa-civicaccess-v1-results.json  browser-qa-civicaccess-v1-summary.md  browser-qa-production-depth-review-persistence-summary.md  civicaccess-v1-release-evidence.md  github-discussions-seed.md  index.html  release-integrity-correction-2026-05-21.md
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: conftest.py  test_accessibility_foundation.py  test_citycore_hardening.py  test_database_url_selection.py  test_postgres_persistence.py  test_production_depth_review_persistence.py  test_runtime_foundation.py
(+20 files in other folders)
